# cocossim

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  setup_dramsim.sh
ae_plots/: README.md  experiments.py  plot.py  plot_parse.py  results.txt
examples/: basic_transformer.txt  cnn_model.txt  simple_matmul.txt
include/: Arch.h  EnqueueStructures.h  Job.h  NNLayers.h  RuntimeStats_t.h  State.h  config.h  global.h  memory.h  perf_enums.h
include/frontends/: ArchParser.h  Frontend.h  LayerParser.h
include/frontends/standard/: StandardArch.h  StandardLayer.h  StandardParser.h  StandardUnits.h
include/units/standard/: SysArray.h  VectorUnit.h
scripts/: build.sh  run_examples.sh
src/: Arch.cc  EnqueueStructures.cc  Job.cc  NNLayers.cc  State.cc  global.cc  main.cc  memory.cc  perf_enums.cc
src/frontends/: Frontend.cc
src/frontends/standard/: StandardArch.cc  StandardLayers.cc  StandardParser.cc
src/units/standard/: SysArray.cc  VectorUnit.cc
